<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaisServicos">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="25sp"
            android:text="Consultar CNPJ"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/etCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite apenas números"
            android:inputType="text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="25sp"
            android:text="Consultar"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/pbCarregando"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvRazaoSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/razaoSocial"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNomeFantasia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/nomeFantasia"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNaturezaJuridica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/naturezaJuridica"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCapitalSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/captialSocial"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDataInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/dataInicio"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPorte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/porte"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/tipo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTelefone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/telefone1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/email"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>